Добавялет правки для защиты преокта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,8 @@
   <link rel="icon" href="favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicons/apple-icon-180x180"><!-- 180x180 -->
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="/fonts/lato/Lato-Regular.woff2" type="font/woff2" crossorigin="anonymous" as="font">
+  <link rel="preload" href="/fonts/oswald/oswaldregular.woff2" type="font/woff2" crossorigin="anonymous" as="font">
   <script src="scripts/index.js" defer></script>
 </head>
 
@@ -49,6 +51,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-chicken500-desktop@1x.webp 1x, images/products/card-chicken500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-chicken500-tablet@1x.webp 1x, images/products/card-chicken500-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-chicken500-mobile@1x.webp 1x, images/products/card-chicken500-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-chicken500-desktop@1x.png 1x, images/products/card-chicken500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-chicken500-tablet@1x.png 1x, images/products/card-chicken500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-chicken500-mobile@1x.png" srcset="images/products/card-chicken500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом курицы">
@@ -67,6 +72,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-chicken1000-desktop@1x.webp 1x, images/products/card-chicken1000-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-chicken1000-tablet@1x.webp 1x, images/products/card-chicken1000-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-chicken1000-mobile@1x.webp 1x, images/products/card-chicken1000-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-chicken1000-desktop@1x.png 1x, images/products/card-chicken1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-chicken1000-tablet@1x.png 1x, images/products/card-chicken1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-chicken1000-mobile@1x.png" srcset="images/products/card-chicken1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом курицы">
@@ -85,6 +93,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-fish500-desktop@1x.webp 1x, images/products/card-fish500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-fish500-tablet@1x.webp 1x, images/products/card-fish500-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-fish500-mobile@1x.webp 1x, images/products/card-fish500-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-fish500-desktop@1x.png 1x, images/products/card-fish500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-fish500-tablet@1x.png 1x, images/products/card-fish500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-fish500-mobile@1x.png" srcset="images/products/card-fish500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 500 г со вкусом рыбы">
@@ -103,6 +114,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-fish1000-desktop@1x.webp 1x, images/products/card-fish1000-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-fish1000-tablet@1x.webp 1x, images/products/card-fish1000-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-fish1000-mobile@1x.webp 1x, images/products/card-fish1000-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-fish1000-desktop@1x.png 1x, images/products/card-fish1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-fish1000-tablet@1x.png 1x, images/products/card-fish1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-fish1000-mobile@1x.png" srcset="images/products/card-fish1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy PRO 1000 г со вкусом рыбы">
@@ -121,6 +135,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-buckwheat500-desktop@1x.webp 1x, images/products/card-buckwheat500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-buckwheat500-tablet@1x.webp 1x, images/products/card-buckwheat500-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-buckwheat500-mobile@1x.webp 1x, images/products/card-buckwheat500-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-buckwheat500-desktop@1x.png 1x, images/products/card-buckwheat500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-buckwheat500-tablet@1x.png 1x, images/products/card-buckwheat500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-buckwheat500-mobile@1x.png" srcset="images/products/card-buckwheat500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом гречки">
@@ -139,6 +156,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-buckwheat1000-desktop@1x.webp 1x, images/products/card-buckwheat1000-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-buckwheat1000-tablet@1x.webp 1x, images/products/card-buckwheat1000-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-buckwheat1000-mobile@1x.webp 1x, images/products/card-buckwheat1000-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-buckwheat1000-desktop@1x.png 1x, images/products/card-buckwheat1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-buckwheat1000-tablet@1x.png 1x, images/products/card-buckwheat1000-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-buckwheat1000-mobile@1x.png" srcset="images/products/card-buckwheat1000-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 1000 г со вкусом гречки">
@@ -157,6 +177,9 @@
           <li class="catalog__item">
             <a class="catalog__link" href="#">
               <picture>
+                <source type="image/webp" media="(min-width: 1440px)" width="169" height="210" srcset="images/products/card-rice500-desktop@1x.webp 1x, images/products/card-rice500-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" width="200" height="210" srcset="images/products/card-rice500-tablet@1x.webp 1x, images/products/card-rice500-tablet@2x.webp 2x">
+                <source type="image/webp" width="140" height="107" srcset="images/products/card-rice500-mobile@1x.webp 1x, images/products/card-rice500-mobile@2x.webp 2x">
                 <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/products/card-rice500-desktop@1x.png 1x, images/products/card-rice500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/products/card-rice500-tablet@1x.png 1x, images/products/card-rice500-tablet@2x.png 2x">
                 <img class="catalog__image" src="images/products/card-rice500-mobile@1x.png" srcset="images/products/card-rice500-mobile@2x.png 2x" width="140" height="107" alt="Cat Energy SLIM 500 г со вкусом риса">
@@ -177,7 +200,7 @@
               <h3 class="catalog__caption-more">Показать еще 100500 товаров</h3>
             </a>
             <p class="catalog__text">На самом деле вкусов гораздо больше!</p>
-            <a class="catalog__button button button-secondary" href="#">Показать все</a>
+            <a class="catalog__button catalog__button--more" href="#">Показать все</a>
           </li>
         </ul>
       </div>
@@ -238,7 +261,7 @@
           <source width="768" height="400" type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x">
           <img class="map__location" src="images/map-mobile@1x.jpg" srcset="images/map-mobile@2x.jpg 2x" width="320" height="362" alt="Карта с местоположением офиса">
         </picture>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4753.526179166685!2d30.32355764841993!3d59.93858748165086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1716911425965!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="map__interactive" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4753.526179166685!2d30.32355764841993!3d59.93858748165086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1716911425965!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
   </main>
@@ -261,7 +284,7 @@
             <span class="visually-hidden">Мы в Телеграме</span></a>
         </li>
       </ul>
-      <a class="htmlacademy-link" href="https://htmlacademy.ru/intensive/adaptive">
+      <a class="main-footer__htmlacademy-link" href="https://htmlacademy.ru/intensive/adaptive">
         <span>HTML Academy</span>
       </a>
     </div>
